made the initial ability to change text on click

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,4 +1,10 @@
 .companyName {
+    display: inline-block;
+    width: 100vw;
+    height: 30px;
+    font-size: 25px;
+    margin: 0;
+    padding: 10px;
+    line-height: 25px;
     text-align: left;
-    vertical-align: middle;
 }
